--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-liquid": "0.0.3",
-    "q": "~0.9.7"
+    "q": "~0.9.7",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
