--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-liquid": "0.0.3",
     "q": "~0.9.7",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-sass": "~0.5.1"
   }
 }
